# template-python-package

./: .gitignore  LICENSE  README.md  pyproject.toml
src/$[project_name]/: __init__.py
