[build-system]
requires = ["uv_build~=0.8.15"]
build-backend = "uv_build"

[project]
name = "$[project-name]"
version = "0.1.0"
description = "$[Description]"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff~=0.14",
]

[project.scripts]
"$[project-name]" = "$[project_name]:main"
