[build-system]
requires = ["uv-build~=0.9.0"]
build-backend = "uv_build"

[project]
name = "$[project-name]"
version = "0.1.0"
description = "$[Description]"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff~=0.14",
]

[project.scripts]
"$[project-name]" = "$[project_name]:main"

[project.urls]
"Documentation" = "https://github.com/havsalt/$[project-name]#Docs.md"
"Source Code" = "https://github.com/havsalt/$[project-name]"
"Issues" = "https://github.com/havsalt/$[project-name]/issues"
