[build-system]
requires = ["uv-build~=0.11.0"]
build-backend = "uv_build"

[project]
name = "$[project-name]"
version = "0.1.0"
description = "$[Description]"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff~=0.15",
]

[project.scripts]
$[project-name] = "$[project_name]:main"

[project.urls]
Homepage = "https://github.com/havsalt/$[project-name]"
Repository = "https://github.com/havsalt/$[project-name]"
Documentation = "https://github.com/havsalt/$[project-name]/blob/main/Docs.md"
Issues = "https://github.com/havsalt/$[project-name]/issues"
Changelog = "https://github.com/havsalt/$[project-name]/blob/main/CHANGELOG.md"
